src/tests/resources/transcripts/errors/error_recovery_for_block.sif
function a ...
  exit repeat
end function
(-- error
expected a new line
unexpected "exit" outside repeat block
--)

if true print 1
(-- error
expected "then"
--)

if true true then set a to 1
(-- error
expected "then"
--)

if true true then
  set a to
end if
(-- error
expected "then"
expected an expression
--)

if true true then set a to 1
else set a to 1
(-- error
expected "then"
--)

if true true then set a to 1
else set a to
(-- error
expected "then"
expected an expression
--)

if true true then set a to
else set a to
(-- error
expected "then"
expected an expression
expected an expression
--)

repeat a
  set a to 1
end repeat
(-- error
expected "forever", "while", "until", "for", or a new line
--)

repeat while
 set a to 1
end repeat
(-- error
expected an expression
--)

repeat until
 set a to 1
end repeat
(-- error
expected an expression
--)

repeat for
 set a to 1
end repeat
(-- error
expected a variable name
expected "in"
--)